test: Service 테스트 추가 및 변경